traefik/2-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: website-http-to-https
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`<YOUR_DOMAIN>`) && PathPrefix(`/dashboard/`) || PathPrefix(`/api/`) # TODO!: Change this host acording to your domain
      kind: Rule
      middlewares:
        - name: website-http-to-https
          namespace: traefik
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
    domains:
      - main: <YOUR_DOMAIN> # TODO!: Change this host acording to your domain
